--- a/programadorNegroBlog/programadorNegroBlog/templates/base.html
+++ b/programadorNegroBlog/programadorNegroBlog/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <html>
 <head>
     <title>
         {% block title %} {% endblock %}
     </title>
-<meta http-equiv="refresh" content="30" charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <meta http-equiv="refresh" content="30" charset="UTF-8">
 </head>
     <body>
         {% include "menu.html" %} <!-- se incluye la plantilla del menu o barra de navegacion-->
@@ -21,24 +23,6 @@
         </footer>
     </body>
 <style>
-    body {
-        margin: 0px 0px;
-        padding: 0px 0px;
-        color: white;
-        background-color: black;
-        font-size: larger;
-    }
-    #bodi{
-        margin-left: 15%;
-        margin-right: 15%;
-    }
-    .fondo {
-        color: black;
-        font-weight: bold;
-    }
-    #cuadroCodigo{
-        padding: 10px 10px;
-        background-color: lemonchiffon;
-    }
+   
 </style>
 </html>
