1. se corrige ruta de las vitas agregamdo ProgNegroBlog/ 2. se agrega el parametro required in los input del login

--- a/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/resultadoFormularioUno.html
+++ b/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/resultadoFormularioUno.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} <!-- permite heredar la plantilla padre que sera fija para todas las plantillas hijas -->
+{% extends "ProgNegroBlog/base.html" %} <!-- permite heredar la plantilla padre que sera fija para todas las plantillas hijas -->
 {% block title %} Resultado Busqueda {% endblock%}
 
 {% block content %}
