--- a/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/login.html
+++ b/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/login.html
@@ -19,7 +19,7 @@
                 
                 <td>
                     
-                     <input id="btn-text" type="text" name="user" placeholder="&#128125 User" >
+                     <input id="btn-text" type="text" name="user" placeholder="&#128125 User" required>
                 </td>
             </tr>
             <tr>
@@ -29,7 +29,7 @@
                     </label>
                 </td> -->
                 <td>
-                    <input id="btn-text" type="password" name="pass" placeholder="🔑 Password" >
+                    <input id="btn-text" type="password" name="pass" placeholder="🔑 Password" required>
                 </td>
             </tr>
             
