1. se mejora conteo de sesiones de usuario en la aplicacion 2. se mejora el estilo responsive del loguin para pantallas grandes de    PC

--- a/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/loginView.html
+++ b/programadorNegroBlog/programadorNegroBlog/templates/ProgNegroBlog/loginView.html
@@ -11,7 +11,9 @@
 <tr>
     <td>
         <h1>
-            Black Programmer
+            Black
+            <br>
+            Programmer
         </h1> 
     </td>
 </tr>
