--- a/programadorNegroBlog/static/css/login.css
+++ b/programadorNegroBlog/static/css/login.css
@@ -13,10 +13,12 @@ h1 {
     padding-bottom: 1cm;  
     animation-name: h1-animation;
     animation-duration: 5s;
+    justify-content: center;
+
 }
 @keyframes h1-animation{
     from {
-        color: dark;
+        color: black;
         /* font-size: 5px; */
     }
     to {
@@ -35,18 +37,34 @@ h1 {
     
 }
 .table-login {
+    width: 366.464px;
     background-color:black;
     margin: auto; /* centra automaticamente los elementos */
     padding: 1cm;
     border-radius: 20px 20px;
+    animation-name: table-login-animation;
+    animation-duration: 2s;
 }
+@keyframes table-login-animation{
+    from {
+        
+        width: 0px;
+        
+    }
+    to {
+        width: 366.464px;
+        
+        
+    }
 
+}
 .td-input
 {
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 15%;
+    padding-right: 15%;
     padding-top: 0.3cm;
     padding-bottom: 0.1cm;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -104,7 +122,17 @@ h1 {
     border-radius: 3rem;
     width: 3cm;
     text-align: center;
+    animation-name: loginBaSubmit;
+    animation-duration: 2s;
+}
 
+@keyframes loginBaSubmit {
+    from {
+        width: 1cm;
+    }
+    to {
+        width: 3cm;
+    }
 }
 
 #btn-submit:hover
@@ -117,8 +145,11 @@ h1 {
 #spam-login{
     text-align: center;
     font-size: 0.5cm;
-    color: tomato;
-    margin-top: 1cm;
+    color: darkred;
+    
+    background-color: whitesmoke;
+    border: 2px solid darkred;
+    border-radius: 4px 4px 4px 4px;
     
     animation-name: spam-log-in;
     animation-duration: 2s;
